# Transcendence

./: .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.elk.yaml  docker-compose.yaml  modules.MD  nohup.out
Tools/Notify/: .env.example  .pre-commit-config.yaml  Cargo.toml  README.md  config.yaml  docker-compose.make.yaml  docker-compose.test.yaml  docker-compose.yaml  types.ts
Tools/Notify/.github/workflows/: rust.yml
Tools/Notify/cassandra/: schema.cql
Tools/Notify/docker/cassandra/: init.sh
Tools/Notify/docker/kafka/: init.sh
Tools/Notify/src/: lib.rs  main.rs
Tools/Notify/src/api/: api_runner.rs  mod.rs
Tools/Notify/src/app/: consumer.rs  load_balancer.rs  mod.rs  producer.rs
Tools/Notify/src/config/: mod.rs  parser.rs  types.rs
Tools/Notify/src/consumer/: kafka_notification_stream_consumer.rs  mod.rs  notification_stream_consumer.rs
Tools/Notify/src/entity/: mod.rs  notification_preferences_entity.rs  notification_to_send_entity.rs
Tools/Notify/src/manager/: clients_manager.rs  mod.rs  task_manager.rs
Tools/Notify/src/metrics/: load_metrics.rs  messages.rs  metrics_receiver.rs  metrics_sender.rs  mod.rs
Tools/Notify/src/models/: mod.rs  notification.rs  notification_event.rs
Tools/Notify/src/repository/: cassandra_notification_preferences.rs  casssandra_notification_to_send_repository.rs  mod.rs  notification_preferences_repository.rs  notification_to_send_repository.rs
Tools/Notify/src/service/: load_balancer_service.rs  mod.rs  notification_preference_service.rs  (+1 more)
Tools/Notify/tests/: mod.rs  utils.rs
(+327 files in other folders)
