[package]
name = "notify"
version = "0.1.0"
edition = "2021"   # or 2024 – either works

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }    # async runtime
log = { version = "0.4", features = ["std", "serde"] }

futures = "0.3"                                    # for stream utilities (optional)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6.1.0"
clap = { version = "4.6.0", features = ["derive"] }
scylla = { version = "1.5.0", features = ["chrono-04"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
anyhow = "1.0.102"
crossbeam-deque = "0.8.6"
serde_yaml = "0.9.34"
serial_test = "3.4.0"
once_cell = "1.21.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio-tungstenite = "0.29.0"
typeshare = "1.0.5"
chrono = { version = "0.4.44", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors"] }
